# subtitle-island

./: AGENTS.md  CONTEXT.md  LICENSE  README.md  package.json  vite.config.ts
.agents/skills/commit/: SKILL.md
.agents/skills/tech-writing/: SKILL.md
.agents/skills/tech-writing/references/: google-tech-writing.md
docs/: dependency-management.md  phase-1-plan.md  prd.md  tauri-architecture-boundary.md
docs/adr/: 0001-build-a-local-first-desktop-subtitle-overlay.md  0002-keep-native-audio-and-session-control-in-tauri-backend.md  0003-separate-click-through-subtitles-from-session-controls.md  0004-do-not-persist-transcript-history-in-the-mvp.md
docs/plans/: phase-1-plan.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: app-commands.json
src-tauri/src/: api_key.rs  app.rs  audio.rs  commands.rs  events.rs  lib.rs  main.rs  microphone.rs  realtime_transcription.rs  session.rs
src/lib/: local-subtitle-session.ts  subtitle-session.ts  tauri.ts
src/lib/components/: SubtitleIsland.svelte
src/routes/: +page.svelte  layout.css
