[package]
name = "subis"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "subis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
audioadapter-buffers = "3.0.0"
base64 = "0.22.1"
cpal = "0.17"
dotenvy = "0.15.7"
futures-util = { version = "0.3.32", features = ["sink"] }
log = "0.4"
rubato = "3.0.0"
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1.52.3", features = ["rt", "macros", "sync", "time", "net", "io-util"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
